--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio:
   rx_notifier: ^1.1.0
   google_maps_flutter: ^2.2.0
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
