--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,15 @@ dependencies:
   rx_notifier: ^1.1.0
   google_maps_flutter: ^2.2.0
   geocoding: ^2.0.5
+  permission_handler: ^10.0.1
+  geolocator: ^9.0.2
+  freezed_annotation: ^2.1.0
+  freezed: ^2.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -54,6 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
