--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^9.0.2
   freezed_annotation: ^2.1.0
   freezed: ^2.0.4
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   flutter_test:
