--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   freezed: ^2.0.4
   firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.0
 
 dev_dependencies:
   flutter_test:
